--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rehype-autolink-headings": "^5.0.1",
-    "rehype-raw": "^6.1.1",
     "rehype-slug": "^4.0.1",
-    "remark-code-titles": "^0.1.1"
+    "remark-code-titles": "^0.1.1",
+    "remark-unwrap-images": "^3.0.1"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.5",
