--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
     "date-fns": "^2.19.0",
+    "framer-motion": "^5.6.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.2",
-    "mdx-prism": "^0.3.3",
+    "mdx-prism": "^0.3.4",
     "next": "^12.2.5",
     "next-mdx-remote": "^4.1.0",
     "next-themes": "^0.0.15",
